--- a/Steckbriefgit.html
+++ b/Steckbriefgit.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
 
 
 
+
+</head>
+
+<body>
+    <p>hallo</p>
+
+</body>
 
 
 
@@ -26,30 +34,3 @@
 
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
